# evsc

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build.rs  justfile
.github/workflows/: linux.yml  test.yml
.husky/hooks/: pre-commit
_test/: .gitignore  test.evsc
examples/: 00.evsc  01.evsc  02.evsc  03.evsc  04.evsc  05.evsc  06.evsc  07.evsc  08.evsc  all.evsc
include/: llvm_bindings.cpp
lib/builtin/: lib.evsc
lib/oxi/builtin/: lib.oxi
lib/oxi/std/: lib.oxi
lib/std/: std.evsc
src/: cli.rs  errors.rs  gentests.rs  lib.rs  macros.rs  main.rs  utils.rs
src/ast/: ast.rs  display.rs  expressions.rs  mod.rs  statements.rs  types.rs  validate.rs  visit.rs
src/backend/: linker.rs  mod.rs
src/backend/linker/: gcc.rs  ld.rs  (+1 more)
src/bindings/: llvm_bindings.rs  mod.rs
src/codegen/: arch.rs  compile_expr.rs  compile_type.rs  compiler.rs  inkwell_ext.rs  mod.rs  pointer.rs  runtime.rs
src/errors/: mod.rs  widgets.rs
src/hashmap/: mod.rs  random_state.rs
src/hir/: interner.rs  lower.rs  mod.rs  resolve.rs
src/lexer/: lexer.rs  mod.rs  token.rs  verify.rs
src/parser/: attributes.rs  expr.rs  lookups.rs  mod.rs  modifiers.rs  parser.rs  stmt.rs  string.rs  types.rs  utils.rs
src/span/: mod.rs  sourcemaps.rs
src/typecheck/: checker.rs  mod.rs  options.rs
tests/: .gitignore  01.ll  02-test.evsc  02.ll  03.evsc  03.ll  04-test.evsc  04.ll  05-test.evsc  05.evsc  05.ll  06-test.evsc  06.evsc  06.ll  07-test.evsc  07.ll  08-test.evsc  08.ll  09-test.evsc  09.ll  10-test.evsc  10.ll  11.ll  integration.rs  visit_tests.rs
tests/common/: mod.rs
(+13 files in other folders)
