[package]
name = "evscc"
version = "1.0.0"
edition = "2024"
license = "MIT"
description = "Evsc compiler"

[dependencies]
anyhow = "1.0"
colored = "3.0.0"
lazy_static = "1.5.0"
regex = "1.11.1"
inkwell = { version = "0.7.0", features = ["llvm21-1"] }
clap = { version = "4.5.45", features = ["derive"] }
parking_lot = "0.12.4"
clang = {version = "2.0.0", features = ["clang_10_0", "runtime"]}

#[lib]
#name = "evscc"
#path = "src/lib.rs"
