[package]
name = "oxic"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Oxi compiler"

[dependencies]
anyhow = "1.0.100"
colored = "3.1.1"
regex = "1.12.2"
inkwell = { version = "0.8.0", features = ["llvm21-1"] }
clap = { version = "4.5.54", features = ["derive"] }
parking_lot = "0.12.5"
clang = { version = "2.0.0", features = ["clang_10_0", "runtime"] }
atty = "0.2"

[dev-dependencies]
similar = "2.7.0"

[build-dependencies]
cc = "1.2.53"

[lib]
name = "oxic"
path = "src/main.rs"

